fixing overflow, search and footer font size

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,6 @@ body {
 }
 
 .top-box {
-  overflow-y: hidden;
   width: 77%;
   height: 100%;
   padding: 6% 0 0 0;
@@ -74,9 +73,9 @@ nav {
   position: relative;
   justify-content: flex-end;
   align-items: center;
-  margin-right: -3.7em;
+  margin-right: -2.5em;
   padding: 0.125em 2% 0.02em 0.02em;
-  left: 0.25em;
+  left: 0.875em;
   top: 0.375em;
   overflow: hidden;
 }
@@ -198,7 +197,7 @@ nav {
 }
 
 .footer-txt {
-  font-size: small;
+  font-size: smaller;
   color: rgb(114, 100, 100);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
